--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,7 @@ body {
 	padding: 5%;
 	border: 12px solid gold;
 } 
-#docUnderScore {
+.docUnderScore {
 	color: black;
 	background-color: white;
 	font-size: 70px;
@@ -33,4 +33,7 @@ body {
 }
 h3, p {
 	font-size: 24px;
+}
+footer {
+	margin: 15% auto 0 auto;
 }
