--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,7 @@ body {
 }
 #page {
 	background-color: #f2f2f2;
+	padding-bottom: 12%;
 }
 .container {
 	width: 65%;
@@ -41,7 +42,7 @@ h3, p {
 	font-size: 22px;
 }
 footer {
-	margin: 15% auto 0 auto;
+	margin: 15px auto;
 }
 
 
